Added the backend login logic in this wriiten in django

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/code.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>InterviewPrep - Real Interview Questions. Real Preparation.</title>
     <meta name="description" content="Master technical interviews with curated questions from top tech companies. Real interview questions with in-depth answers for React, JavaScript, Python, System Design, and more." />
